--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
     }
 
     header {
-      background-image: url('/dist/img/bg-top.jpg');
+      background-image: url('./dist/img/bg-top.jpg');
       width: 100%;
       height: 15vh; /* You must set a specified height */
       background-position: center; /* Center the image */
