--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     #txtPhongKham {
       font-family: sans-serif;
       text-transform: uppercase;
-      font-size: 22px;
+      font-size: 24px;
     }
 
     #txtPhongKham:before {
-      font-size: 22px;
+      font-size: 24px;
       content: attr(data-text);
       transform-origin: bottom;
       transform: rotateX(180deg);
@@ -50,7 +50,7 @@
       opacity: .5;
     }
     .text-shadow {
-        font-size: 28px;
+        font-size: 32px;
         font-weight: bold;
         color: white;
         text-transform: uppercase;
@@ -71,7 +71,7 @@
     th {
       background-color: #ddd;
       text-align: center;
-      font-size: .8rem;
+      font-size: 1rem;
     }
     .cell-active{
       background-color: #75EDD1;
@@ -79,7 +79,7 @@
     }
 
     .cell-stt{
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-weight: bold;
       width: 10%;
       text-align: center;
@@ -94,6 +94,10 @@
       font-size: 1rem;
       font-weight: bold;
     }
+    .text-sodk{
+      font-size: 1rem;
+    }
+
     .fw-bold-2{
       font-weight: bold;
     }
@@ -104,10 +108,10 @@
   <div class="page">
     <header class="position-relative">
       <div class="">
-        <h2 class="position-absolute mb-0" id="txtPhongKham" style="top: 8%; left: 1%;" data-text="PHÒNG KHÁM ĐA KHOA">
+        <h2 class="position-absolute mb-0" id="txtPhongKham" style="top: 8%; left: 5%;" data-text="PHÒNG KHÁM ĐA KHOA">
           PHÒNG KHÁM ĐA KHOA
         </h2>
-        <h1 class="position-absolute text-shadow mb-0" id="txtTenPhongKham" style="top: 50%; left: 20%;">
+        <h1 class="position-absolute text-shadow mb-0" id="txtTenPhongKham" style="top: 50%; left: 25%;">
           VẠN PHÚC AN
         </h1>
       </div>
