--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .cell-stt{
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: bold;
       width: 10%;
       text-align: center;
@@ -91,11 +91,11 @@
     }
 
     .text-tenbn{
-      font-size: 1rem;
+      font-size: 1.3rem;
       font-weight: bold;
     }
     .text-sodk{
-      font-size: 1rem;
+      font-size: 1.1rem;
     }
 
     .fw-bold-2{
@@ -108,7 +108,7 @@
   <div class="page">
     <header class="position-relative">
       <div class="">
-        <h2 class="position-absolute mb-0" id="txtPhongKham" style="top: 8%; left: 5%;" data-text="PHÒNG KHÁM ĐA KHOA">
+        <h2 class="position-absolute mb-0" id="txtPhongKham" style="top: 10%; left: 5%;" data-text="PHÒNG KHÁM ĐA KHOA">
           PHÒNG KHÁM ĐA KHOA
         </h2>
         <h1 class="position-absolute text-shadow mb-0" id="txtTenPhongKham" style="top: 50%; left: 25%;">
@@ -116,7 +116,7 @@
         </h1>
       </div>
     </header>
-    <div class="p-2">
+    <div class="py-2 px-4">
       <div class="row row-cards">
         <div class="col-6">
           <div class="card">
