--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
       font-size: 1rem;
     }
     .cell-active{
-      background-color: #75EDD1;
-      color: #0146C7;
+      /* background-color: #75EDD1; */
+      /* color: #0146C7; */
+      background-color: #0146C7;
+      color: white;
     }
 
     .cell-stt{
