--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
     }
 
     th {
-      background-color: #ddd;
+      background-color: lightgoldenrodyellow;
       text-align: center;
       font-size: 1rem;
+      color: red;
     }
     .cell-active{
       /* background-color: #75EDD1; */
