--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     }
 
     th {
-      background-color: lightgoldenrodyellow;
+      background-color: #9bf73c;
       text-align: center;
       font-size: 1rem;
-      color: red;
+      color: black;
     }
     .cell-active{
       /* background-color: #75EDD1; */
@@ -111,7 +111,7 @@
   <div class="page">
     <header class="position-relative">
       <div class="">
-        <h2 class="position-absolute mb-0" id="txtPhongKham" style="top: 10%; left: 5%;" data-text="PHÒNG KHÁM ĐA KHOA">
+        <h2 class="position-absolute mb-0" id="txtPhongKham" style="top: 15%; left: 5%;" data-text="PHÒNG KHÁM ĐA KHOA">
           PHÒNG KHÁM ĐA KHOA
         </h2>
         <h1 class="position-absolute text-shadow mb-0" id="txtTenPhongKham" style="top: 50%; left: 25%;">
