--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     }
 
     th {
-      background-color: #9bf73c;
+      background-color: #75EDD1;
+      color: #0146C7;
       text-align: center;
-      font-size: 1rem;
-      color: black;
+      font-size: 1.1rem;
     }
     .cell-active{
       /* background-color: #75EDD1; */
@@ -96,9 +96,11 @@
     .text-tenbn{
       font-size: 1.3rem;
       font-weight: bold;
+      line-height: 1.2;
     }
     .text-sodk{
       font-size: 1.1rem;
+      line-height: 1.2;
     }
 
     .fw-bold-2{
