--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="col-auto mt-1">
           <div class="clinic-info">
             <div class="clinic-logo">
-                <img src="/dist/img/ty1.2-01.svg" alt="Clinic Logo"> <!-- Đổi "logo.png" thành hình ảnh logo của bạn -->
+                <img src="./dist/img/ty1.2-01.svg" alt="Clinic Logo"> <!-- Đổi "logo.png" thành hình ảnh logo của bạn -->
             </div>
             <div class="clinic-details">
               <p class="mb-0">Đơn vị phối hợp thực hiện</p>
