--- a/index.html
+++ b/index.html
@@ -405,10 +405,15 @@
             </table>
           </div>
         </div>
+        <div class="col-auto mt-1">
+          <p class="mb-0 fw-bold-2" style="font-size: 1.1rem;">
+            BỆNH NHÂN QUA LƯỢT:
+          </p>
+        </div>
         <div class="col mt-1">
           <div class="label-container">
               <p class="mb-0 fw-bold-2 label">
-                BỆNH NHÂN QUA LƯỢT: NGUYỄN VĂN A - PHÒNG KHÁM NỘI 1 - SỐ ĐĂNG KÝ: 0004
+                NGUYỄN VĂN A - PHÒNG KHÁM NỘI 1 - SỐ ĐĂNG KÝ: 0004
               </p>
           </div>
         </div>
